--- a/flex.html
+++ b/flex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="flex-style.css">
-    <title>UI кит проекта РН Банк</title>
+    <title>Игрульки в JavaScript</title>
 </head>
 
 <body>
