--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="flex-style.css">
-    <title>Игрульки в JavaScript</title>
+    <title>Игрульки в CSS и JavaScript</title>
 </head>
 
 <body>
@@ -34,6 +34,11 @@
             <div class="flex-item item-4"><span>4</span></div>
             <div class="flex-item item-5"><span>5</span></div>
         </div>
+        <!--<div class="flex-box icon-text">
+            <div class="icon-box"><img src="img/circus.svg"></div>
+            <div class="text-box"><p>При клике на <span>radio</span> (<span>flexControls[i]</span>) должно срабатывать событие. В ходе этого события должна выполняться проверка. Удаление всех классов, кроме <span>.flex-box</span>. Добавление того класса контейнеру (<span>flexObject</span>), который содержит нажатый radio (<span>flexControls[i].value</span>).</p>
+            <p>A year ago, I took a step forward once again and took the position of VP R&D in my company. I felt like I was back on the playground, ready to push everyone forward. I have very strong feelings about how things should be done in software development. I also have more than 20 years of formal and informal experience in the field. How difficult could it be?</p></div>
+        </div>-->
     </main>
     <footer></footer>
     <script src="script.js"></script>
